# timjs

./: .env.example  .gitignore  CLAUDE.md  README.md  create_user.py  init_db.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: admin.py  config.py  main.py  schemas.py
app/db/: connection.py  models.py  query.py
app/middlewares/: auth.py  db.py
app/routers/: events.py  media.py  users.py
app/utils/: config.py  push_notification.py  s3.py
tests/: conftest.py
tests/api/: test_events.py  test_media.py  test_users.py
tests/db/: test_query.py
tests/utils/: test_config.py
